CSS code amended

--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
 
   <header>
     <div class="container">
-      <img src="img/logo.png" alt="Jo-Shan" class="logo">
+      <a href="index.html"><img src="img/logo.png" alt="Jo-Shan" class="logo"></a>
       <nav>
         <ul>
           <li><a href="index.html"> Work </a></li>
@@ -40,10 +40,12 @@
     <div id="story">
       <!--open-->
       <div class="container">
-        <picture>
-          <source srcset="img/jsprofile.jpg" media="(max-width:767px)">
-          <img src="img/jsprofile1.jpg" alt="Jo-Shan" class="img">
-        </picture>
+        <div class="center">
+          <picture>
+            <source srcset="img/jsprofile.jpg" media="(max-width:767px)">
+            <img src="img/jsprofile1.jpg" alt="Jo-Shan" class="img">
+          </picture>
+        </div>
 
         <div class="row">
           <!-- row -->
@@ -108,14 +110,14 @@
         <a href="mailto:jo_shan@hotmail.com?" class="button contact">Email me</a>
       </div>
 
-      <div>
+      <div class="social">
         <!-- social media -->
-        <img src="img/facebook.svg" alt="Facebook" class="social">
-        <img src="img/linkedin.svg" alt="Linkedin" class="social">
+        <img src="img/facebook.svg" alt="Facebook">
+        <img src="img/linkedin.svg" alt="Linkedin">
       </div>
 
-      <div>
-        <p class="center">
+      <div class="copyright">
+        <p>
           &copy; Copyright 2019 coachme.com
         </p>
       </div>
