--- a/coachme.html
+++ b/coachme.html
@@ -15,7 +15,7 @@
 
   <header>
     <div class="container">
-      <img src="img/logo.png" alt="Jo-Shan" class="logo">
+      <a href="index.html"><img src="img/logo.png" alt="Jo-Shan" class="logo"></a>
       <nav>
         <ul>
           <li><a href="index.html"> Work </a></li>
@@ -40,109 +40,108 @@
     <div id="process">
       <!--main2 open-->
       <div class="container">
-        <picture>
-          <source srcset="img/expert/home.jpg" media="(max-width:767px)">
-          <img src="img/expert/homepage.jpg" alt="CoachMe Home" class="img">
-        </picture>
-      </div>
-
-      <div class="container">
-        <!--open1.1-->
-        <p>
-          The purpose of the expert page is for users to search for experts from around the world.
-          The ideation of having a list of available expert is to allow users to look at all available experts in the app.
-        </p>
-      </div>
-      <!--close1.1-->
-
-      <div>
-        <!--open2-->
-        <div class="container">
-          <!--open2.1-->
-          <h2>My Process</h2>
-        </div>
-        <!--close2.1-->
-
-        <div class="container">
-          <!--open2.2-->
-          <h3>User Flow - Expert page</h3>
+        <div class="center">
           <picture>
-            <source srcset="img/expert/userflow.jpg" media="(max-width:767px)">
-            <img src="img/expert/userflow.jpg" alt="User flow" class="img2">
+            <source srcset=" img/expert/home.jpg" media="(max-width:767px)">
+            <img src="img/expert/homepage.jpg" alt="CoachMe Home" class="img">
           </picture>
+        </div>
+
+        <div>
+          <p>
+            The purpose of the expert page is for users to search for experts from around the world.
+            The ideation of having a list of available expert is to allow users to look at all available experts in the app.
+          </p>
+        </div>
+
+        <div>
+          <!--open2-->
           <div>
-            <!--open2.2a-->
-            <p>
-              I’ve performed user interviews with a few candidates from different fields who have experienced career change or currently looking for career advancement/ career change.
-              After user research and interviews, I’ve created this user flow for one of our user personas - Dawna.
-            </p>
+            <!--open2.1-->
+            <h2>My Process</h2>
           </div>
-          <!--close2.2a-->
-        </div>
-        <!--close2.2-->
-      </div>
-      <!--close2-->
+          <!--close2.1-->
 
-      <div class="container">
-        <div class="row">
-          <!--open3 row-->
-          <h3> Ideation & Wireframe </h3>
-
-          <div class="col-md-6 col-lg-7 col-xl-4">
-            <!--open column1-->
+          <div class="stage_even">
+            <!--open2.2-->
+            <h3>User Flow - Expert page</h3>
             <picture>
-              <source srcset="img/expert/ideation.jpg" media="(max-width:767px)">
-              <img src="img/expert/ideation1.jpg" alt="Wireframes" class="img2">
+              <source srcset="img/expert/userflow.jpg" media="(max-width:767px)">
+              <img src="img/expert/userflow.jpg" alt="User flow" class="img2">
             </picture>
+            <div>
+              <!--open2.2a-->
+              <p>
+                I’ve performed user interviews with a few candidates from different fields who have experienced career change or currently looking for career advancement/ career change.
+                After user research and interviews, I’ve created this user flow for one of our user personas - Dawna.
+              </p>
+            </div>
+            <!--close2.2a-->
           </div>
-          <!--close column1-->
-
-          <div class="col-md-6 col-lg-5 col-xl-4">
-            <!--open column2-->
-            <p>
-              I’ve created a sketch of the design, followed by the low and mid-fidelity wireframe.
-              Usability testing was performed when the high fidelity version of the design was created.
-            </p>
-          </div>
-          <!--close column2-->
+          <!--close2.2-->
         </div>
-        <!--close3 row-->
+        <!--close2-->
 
-        <div class="row">
-          <!--open4 row-->
-          <h3> Final Design </h3>
+        <div class="stage_odd">
+          <div class="row">
+            <!--open3 row-->
+            <h3> Ideation & Wireframe </h3>
 
-          <div class="col-md-6 col-lg-7 col-xl-4">
-            <!--open column1-->
-            <picture>
-              <source srcset="img/expert/expert.jpg" media="(max-width:767px)">
-              <img src="img/expert/expertlist.jpg" alt="Expert page" class="img">
-            </picture>
+            <div class="col-md-6 col-lg-7 col-xl-4">
+              <!--open column1-->
+              <picture>
+                <source srcset="img/expert/ideation.jpg" media="(max-width:767px)">
+                <img src="img/expert/ideation1.jpg" alt="Wireframes" class="img2">
+              </picture>
+            </div>
+            <!--close column1-->
+
+            <div class="col-md-6 col-lg-5 col-xl-4">
+              <!--open column2-->
+              <p>
+                I’ve created a sketch of the design, followed by the low and mid-fidelity wireframe.
+                Usability testing was performed when the high fidelity version of the design was created.
+              </p>
+            </div>
+            <!--close column2-->
           </div>
-          <!--close column1-->
+          <!--close3 row-->
 
-          <div class="col-md-6 col-lg-5 col-xl-4">
-            <!--open column2-->
-            <p>
-              The wireframe was polished based on feedback from usability testing and accessibility testing.
-            </p>
+          <div class="row stage_even">
+            <!--open4 row-->
+            <h3> Final Design </h3>
+
+            <div class="col-md-6 col-lg-7 col-xl-4" style="background: #4A84BE; text-align: center; padding: 30px 80px">
+              <!--open column1-->
+              <picture>
+                <source srcset="img/expert/expert.jpg" media="(max-width:767px)">
+                <img src="img/expert/expert-1.jpg" alt="Expert page" class="img">
+              </picture>
+            </div>
+            <!--close column1-->
+
+            <div class="col-md-6 col-lg-5 col-xl-4">
+              <!--open column2-->
+              <p>
+                The wireframe was polished based on feedback from usability testing and accessibility testing.
+              </p>
+            </div>
+            <!--close column2-->
           </div>
-          <!--close column2-->
+          <!--close4 row-->
         </div>
-        <!--close4 row-->
-      </div>
 
-      <div class="container">
-        <!--open5-->
-        <h3> Prototype </h3>
-        <p>
-          Checkout my prototype <a href="https://invis.io/2MRHMJCFB56#/347019005_High-Fid_V2-_Web_HomeNew1">here.</a>
-        </p>
-      </div>
-      <!--close5-->
+        <div class="container">
+          <!--open5-->
+          <h3> Prototype </h3>
+          <p>
+            Checkout my prototype <a href="https://invis.io/2MRHMJCFB56#/347019005_High-Fid_V2-_Web_HomeNew1">here.</a>
+          </p>
+        </div>
+        <!--close5-->
 
-    </div>
-    <!--main2 close-->
+      </div>
+      <!--main2 close-->
   </main>
 
   <footer id="contact">
@@ -158,14 +157,14 @@
         <a href="mailto:jo_shan@hotmail.com?" class="button contact">Email me</a>
       </div>
 
-      <div>
+      <div class="social">
         <!-- social media -->
-        <img src="img/facebook.svg" alt="Facebook" class="social">
-        <img src="img/linkedin.svg" alt="Linkedin" class="social">
+        <img src="img/facebook.svg" alt="Facebook">
+        <img src="img/linkedin.svg" alt="Linkedin">
       </div>
 
-      <div>
-        <p class="center">
+      <div class="copyright">
+        <p>
           &copy; Copyright 2019 coachme.com
         </p>
       </div>
