CSS code edited

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
         <div class="row">
           <!-- first row -->
-          <div class="col-md-6 col-lg-7 col-xl-4" style="background: #4A84BE; text-align: center; padding: 30px 80px">
+          <div class="col-md-6 col-lg-7 col-xl-8 column_1">
             <!-- first column -->
             <picture>
               <source srcset="img/expert/expert.jpg" media="(max-width:767px)">
@@ -55,7 +55,7 @@
             </picture>
           </div>
 
-          <div class="col-md-6 col-lg-5 col-xl-4">
+          <div class="col-md-6 col-lg-5 col-xl-4 column_2">
             <!-- second column -->
             <h3>Find an expert on CoachMe</h3>
             <p>
@@ -67,14 +67,14 @@
 
         <div class="row">
           <!-- second row -->
-          <div class="col-md-6 col-lg-7 col-xl-4" style="background: orange; text-align: center; padding: 30px 80px">
+          <div class="col-md-6 col-lg-7 col-xl-8 column_1">
             <!-- first column -->
             <picture>
               <source srcset="img/expert/forum1.jpg" media="(max-width:767px)">
               <img src="img/expert/forum-1.jpg" alt="CoachMe Forum" class="img">
             </picture>
           </div>
-          <div class="col-md-6 col-lg-5 col-xl-4">
+          <div class="col-md-6 col-lg-5 col-xl-4 column_2">
             <!-- second column -->
             <h3>Forum on CoachMe</h3>
             <p>
@@ -86,7 +86,7 @@
 
         <div class="row">
           <!-- 3rd row -->
-          <div class="col-md-6 col-lg-8 col-xl-4">
+          <div class="col-md-6 col-lg-7 col-xl-8">
             <!-- first column -->
             <svg xmlns="http://www.w3.org/2000/svg" class="berlin-illustration" viewBox="0 0 700 505" xmlns:xlink="http://www.w3.org/1999/xlink">
               <defs>
@@ -1027,7 +1027,7 @@
               </g>
             </svg>
           </div>
-          <div class="col-md-6 col-lg-8 col-xl-4">
+          <div class="col-md-6 col-lg-5 col-xl-4 column_2">
             <!-- second column -->
             <h3>CSS Animation</h3>
             <p>
