--- a/coachme.html
+++ b/coachme.html
@@ -87,7 +87,7 @@
             <!--open3 row-->
             <h3> Ideation & Wireframe </h3>
 
-            <div class="col-md-6 col-lg-7 col-xl-4">
+            <div class="col-md-6 col-lg-7 col-xl-8 column_1">
               <!--open column1-->
               <picture>
                 <source srcset="img/expert/ideation.jpg" media="(max-width:767px)">
@@ -96,7 +96,7 @@
             </div>
             <!--close column1-->
 
-            <div class="col-md-6 col-lg-5 col-xl-4">
+            <div class="col-md-6 col-lg-5 col-xl-4 column_2">
               <!--open column2-->
               <p>
                 I’ve created a sketch of the design, followed by the low and mid-fidelity wireframe.
@@ -111,7 +111,7 @@
             <!--open4 row-->
             <h3> Final Design </h3>
 
-            <div class="col-md-6 col-lg-7 col-xl-4" style="background: #4A84BE; text-align: center; padding: 30px 80px">
+            <div class="col-md-6 col-lg-7 col-xl-8 column_1">
               <!--open column1-->
               <picture>
                 <source srcset="img/expert/expert.jpg" media="(max-width:767px)">
@@ -120,7 +120,7 @@
             </div>
             <!--close column1-->
 
-            <div class="col-md-6 col-lg-5 col-xl-4">
+            <div class="col-md-6 col-lg-5 col-xl-4 column_2">
               <!--open column2-->
               <p>
                 The wireframe was polished based on feedback from usability testing and accessibility testing.
