--- a/about.html
+++ b/about.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
 
 <head>
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
   <link rel="stylesheet" type="text/css" href="css/style.css">
   <link href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700" rel="stylesheet">
@@ -15,14 +16,17 @@
 
   <header>
     <div class="container">
-      <a href="index.html"><img src="img/logo.png" alt="Jo-Shan" class="logo"></a>
-      <nav>
-        <ul>
-          <li><a href="index.html"> Work </a></li>
-          <li><a href="about.html"> About </a></li>
-          <li><a href="#contact"> Contact Jo-Shan </a></li>
-        </ul>
-      </nav>
+      <div class="navtoggle" id="myNavtoggle">
+        <a href="index.html"><img src="img/logo.png" alt="Jo-Shan" class="logo"></a>
+        <nav>
+          <ul>
+            <li><a href="index.html"> Work </a></li>
+            <li><a href="about.html"> About </a></li>
+            <li><a href="#contact"> Contact Jo-Shan </a></li>
+            <li><a href="javascript:void(0);" class="icon" onclick="myFunction()"><i class="fas fa-bars"></i></a></li>
+          </ul>
+        </nav>
+      </div>
     </div>
   </header>
 
@@ -124,6 +128,7 @@
     </div>
   </footer>
 
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
   <script src="js/scripts.js"></script>
 </body>
 
