Code edited (minor)
- extra semicolons removed on script.js
- Changed of background colour for all buttons

--- a/coachme.html
+++ b/coachme.html
@@ -145,7 +145,8 @@
         <!--close5-->
 
       </div>
-      <!--main2 close-->
+    </div>
+    <!--main2 close-->
   </main>
 
   <footer id="contact">
