--- a/about.html
+++ b/about.html
@@ -57,7 +57,7 @@
             <!--column 1-->
             <h2>My Story</h2>
             <p>
-              I’m Jo-Shan, a UX designer graduated from CareerFoundry.
+              I’m Jo-Shan, a certified UX designer graduated from CareerFoundry.
               I’m experienced in Customer Success and Digital Marketing, and maximising customer experience is my passion.
               I look forward to joining the Product world and designing optimal User Experience for a positive user journey.
             </p>
